[tool.poetry]
name = "tabletop-rpg-dm"
version = "0.1.0"
description = "An agentic AI Dungeon Master for tabletop RPGs"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "rpg_dm", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.12.0"  # Compatible with OpenRouter API
python-dotenv = "^1.0.0"
rich = "^13.7.0"  # For beautiful CLI output
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.3"
black = "^23.12.1"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rpg-dm = "rpg_dm.cli:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
